# nvidia-toolkit-framework

./: .gitignore  LICENSE  README.md  USAGE.md  pyproject.toml
config/: use-case-template.yaml
config/examples/: realtime-recommendation.yaml
docs/: PROMPT_GUIDE.md  QUICKSTART.md
prompts/implementation/: data-pipeline.md  model-implementation.md  scaffold-generator.md
prompts/planning/: 01-use-case-discovery.md  02-architecture-design.md
prompts/validation/: benchmark-plan.md
